feat: Add prominent supporters and improve UI responsiveness
Introduces a new section to showcase key supporting figures with their images and titles, enhancing the credibility and visual appeal of the candidate profile.

Additionally, this change includes:
- Implemented a "no-scrollbar" class to improve the visual consistency of navigation elements across different browsers and devices.
- Enhanced the Navbar's visual design with subtle hover effects and adjusted spacing for better user experience on various screen sizes.
- Updated the main candidate header with a more dynamic visual flourish.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             font-family: 'Hind Siliguri', sans-serif;
             background-color: #fcfcfc;
         }
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
     </style>
 <script type="importmap">
 {
