--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+        @keyframes glow {
+          0%, 100% { box-shadow: 0 0 20px rgba(234, 179, 8, 0.4); }
+          50% { box-shadow: 0 0 40px rgba(234, 179, 8, 0.7); }
+        }
+        .animate-glow {
+          animation: glow 2s infinite;
+        }
     </style>
 <script type="importmap">
 {
